[tool.poetry]
name = "teste"
version = "0.1.0"
description = ""
authors = ["Reinbold <reinbold.belle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
